- Added bootstrap grid for better visuals - bugfix for input field labels (wrong text)

--- a/index.html
+++ b/index.html
@@ -2,22 +2,35 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.js"></script>
         <script src="js/mainModule.js"></script>
         <title>AngularJS</title>
     </head>
-    <body ng-app="myApp" ng-controller="myController">
-        <div>
-            <h1>Enter data here, see result after horizontal line:</h1>
-            <p>Name:        <input type="text"   placeholder="First name" ng-model="firstName" ></p>
-            <p>First name:  <input type="text"   placeholder="Last name"  ng-model="lastName"  ></p>
-            <span>Quantity: <input type="number" placeholder="Quantity"  ng-model="quantity"  ></span>
-            <span>Costs:    <input type="number" placeholder="Price"     ng-model="price"     ></span>
-
-            <hr>
-
-            <h1>Hello, {{ nameFormatted() }}</h1>
-            <p>You bought {{ quantityFormatted() }} item(s) with a total value of {{ sum() | currency : symbol : fractionSize }} US-Dollars.</p>
+    <body ng-app="myApp" ng-controller="myController" class="container">
+        <div class="row testRun">
+            <div class="col-xs-12">
+                <div class="col-xs-12 col-md-6">
+                    <div class="col-xs-4">
+                        <p>First name:</p>
+                        <p>Last name:</p>
+                        <p>Quantity:</p>
+                        <p>Price:</p>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text"   placeholder="First name" ng-model="firstName" ><br>
+                        <input type="text"   placeholder="Last name"  ng-model="lastName"  ><br>
+                        <input type="number" placeholder="Quantity"   ng-model="quantity"  ><br>
+                        <input type="number" placeholder="Price"      ng-model="price"     >
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <h1>Hello, {{ nameFormatted() }}</h1>
+                    <p>You bought {{ quantityFormatted() }} item(s) with a total value of {{ sum() | currency : symbol : fractionSize }} US-Dollars.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
